# haskell-irssi-log-parser

./: .gitignore  README.md  haskell-irssi-log-parser.cabal
src/Parser/Irssi/: Log.hs
src/Parser/Irssi/Log/: JSON.hs  Regex.hs  Types.hs
src/Parser/Irssi/Log/Util/: Import.hs
test/: Spec.hs
